fixed past and future shifts window in user-prof

--- a/src/app/user-event/user-event.component.scss
+++ b/src/app/user-event/user-event.component.scss
@@ -329,3 +329,8 @@ input.apple-switch:checked:after {
   font-size: 14px;
   font-style: italic;
 }
+
+.past-n-future{
+  overflow-y: auto;
+  height: 60vh;
+}
